Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignBoolObjBooleanField.quorum
class Main
    boolean v = true
    action Main
        Test(v)
    end

    action Test(Boolean var)
        if var:GetValue() = true
            output "passed"
        end
    end
end
