Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(true)
        Test(v)
    end

    action Test(number var)
    end
end
